--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "tscodegendsl",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "TypeScript codegen DSL",
-  "main": "index.ts",
+  "main": "index.js",
   "author": "Laurence Dougal Myers <laurencedougalmyers@gmail.com>",
   "license": "MIT",
   "scripts": {
     "lint": "eslint . --ext .ts",
     "package": "rimraf ./package && tsc -p tsconfig_package.json && ts-node tools/package.ts",
-    "publish:npm": "yarn lint && yarn test && yarn package && cd package && yarn publish --non-interactive --access public",
-    "test": "mocha"
+    "publish:npm": "yarn tsc && yarn lint && yarn test && yarn package && cd package && yarn publish --non-interactive --access public",
+    "test": "mocha",
+    "tsc": "tsc --noEmit"
   },
   "devDependencies": {
     "@types/app-root-path": "1.2.4",
